--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Día Hábil en Uruguay</title>
+    <title>Tu Día Hábil - Uruguay</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calcula tu Día Hábil en Uruguay</h1>
+        <h1>Calculadora de Días Hábiles 🇺🇾</h1>
         <label for="fecha">Selecciona una fecha:</label>
         <input type="date" id="fecha">
-
+        
         <label for="dias">Cantidad de días hábiles:</label>
         <input type="number" id="dias" min="1">
 
         <button onclick="calcularDiaHabil()">Calcular</button>
-
+        
         <p id="resultado"></p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
