--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Día Hábil</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Asegura que styles.css esté en la misma carpeta -->
+    <link rel="stylesheet" href="CSS/styles.css"> <!-- Ahora apunta correctamente a la carpeta CSS -->
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
         <p id="resultado_corrido"></p>
     </div>
     
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script> <!-- Asegúrate de que también el JS esté bien referenciado -->
 </body>
 </html>
