--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Día Hábil</title>
-    <link rel="stylesheet" href="CSS/styles.css"> <!-- Ahora apunta correctamente a la carpeta CSS -->
+    <!-- Ruta para el archivo CSS dentro de la carpeta 'main' -->
+    <link rel="stylesheet" href="main/CSS/styles.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +23,7 @@
         <p id="resultado_corrido"></p>
     </div>
     
-    <script src="JS/script.js"></script> <!-- Asegúrate de que también el JS esté bien referenciado -->
+    <!-- Ruta para el archivo JS dentro de la carpeta 'main' -->
+    <script src="main/JS/script.js"></script>
 </body>
 </html>
