--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tu Día Hábil</title>
-    <!-- Ruta para el archivo CSS dentro de la carpeta 'main' -->
-    <link rel="stylesheet" href="main/CSS/styles.css">
+    <!-- Ruta a style.css en la raíz del repositorio -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +23,7 @@
         <p id="resultado_corrido"></p>
     </div>
     
-    <!-- Ruta para el archivo JS dentro de la carpeta 'main' -->
-    <script src="main/JS/script.js"></script>
+    <!-- Ruta a script.js en la raíz del repositorio -->
+    <script src="script.js"></script>
 </body>
 </html>
