--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1> Calculadora de Días Hábiles</h1>
+        <h1> Calculadora de Días Hábiles Uruguay</h1>
         
         <label for="fecha">Selecciona una fecha:</label>
         <input type="date" id="fecha">
