--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Día Hábil</title>
+    <title>Tu Día Hábil Uruguay</title>
     <!-- Ruta a style.css en la raíz del repositorio -->
     <link rel="stylesheet" href="style.css">
 </head>
