--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Día Hábil Uruguay</title>
-    <!-- Ruta a style.css en la raíz del repositorio -->
-    <link rel="stylesheet" href="style.css">
+    <title>Tu Día Hábil</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1> Calculadora de Días Hábiles Uruguay</h1>
+        <h1>📅 Calculadora de Días Hábiles</h1>
         
         <label for="fecha">Selecciona una fecha:</label>
         <input type="date" id="fecha">
@@ -22,8 +21,11 @@
         <p id="resultado"></p>
         <p id="resultado_corrido"></p>
     </div>
-    
-    <!-- Ruta a script.js en la raíz del repositorio -->
-    <script src="script.js"></script>
+
+    <footer>
+        <p>Hecho por Miguel Alves</p>
+    </footer>
+
+    <script src="JS/script.js"></script>
 </body>
 </html>
