--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Día Hábil</title>
+    <title>Tu Día Hábil Uruguay</title>
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>📅 Calculadora de Días Hábiles</h1>
+        <h1>Calculadora de Días Hábiles Uruguay</h1>
         
         <label for="fecha">Selecciona una fecha:</label>
         <input type="date" id="fecha">
