--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👨‍⚖️Tu Día Hábil Uruguay👩‍⚖️</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <title>Tu Día Hábil</title>
+    <!-- Ruta a style.css en la raíz del repositorio -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Días Hábiles Uruguay</h1>
+        <h1>👩‍⚖️ Calculadora de Días Hábiles🧑‍⚖️</h1>
         
         <label for="fecha">Selecciona una fecha:</label>
         <input type="date" id="fecha">
@@ -21,11 +22,8 @@
         <p id="resultado"></p>
         <p id="resultado_corrido"></p>
     </div>
-
-    <footer>
-        <p>Hecho por Miguel Alves</p>
-    </footer>
-
-    <script src="JS/script.js"></script>
+    
+    <!-- Ruta a script.js en la raíz del repositorio -->
+    <script src="script.js"></script>
 </body>
 </html>
