--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Día Hábil Uruguay</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ahora apunta correctamente a la raíz -->
+    <title>Tu Día Hábil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -26,6 +26,6 @@
         <p>De Miguel a Vicky 🫶</p>
     </footer>
 
-    <script src="script.js"></script> <!-- Ahora apunta correctamente a la raíz -->
+    <script src="script.js"></script>
 </body>
 </html>
