--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>👩‍⚖️ Tu Día Hábil 🧑‍⚖️</h1> <!-- Aquí está fuera del contenedor -->
 
-    <h2>Calculadora de tu día hábil</h2> <!-- Título fuera del contenedor -->
+    <h2>Calculadora de tu día hábil Uruguay</h2> <!-- Título fuera del contenedor -->
     
     <div class="container">
         <label for="fecha">Selecciona una fecha:</label>
