--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Día Hábil</title>
+    <title>Calculadora de tu Día Hábil Uruguay</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>👩‍⚖️ Tu Día Hábil 🧑‍⚖️</h1> <!-- Aquí está fuera del contenedor -->
-
-    <h2>Calculadora de tu día hábil Uruguay</h2> <!-- Título fuera del contenedor -->
+    <h1 class="title">
+        <span class="main-title">👩‍⚖️ Tu Día Hábil 🧑‍⚖️</span>
+        <span class="sub-title">Calculadora de tu Día Hábil</span>
+        <span class="sub-title">Uruguay</span>
+    </h1>
     
     <div class="container">
         <label for="fecha">Selecciona una fecha:</label>
