--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1 class="title">
-        <span class="main-title">👩‍⚖️ Tu Día Hábil 🧑‍⚖️</span>
-        <span class="sub-title">Calculadora de tu Día Hábil</span>
+        <span class="main-title">👩‍⚖️ Calculadora de tu Día Hábil 🧑‍⚖️</span>
         <span class="sub-title">Uruguay</span>
     </h1>
     
