--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="google-site-verification" content="LCGPDSlNvAWgG8nmTtlGldRpRumg4z9EgABCd0Uh0HY" />
     <title>Calculadora de tu Día Hábil Uruguay</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Código de Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6775600074630483"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
     <h1 class="title">
