--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <h1 class="title">
-        <span class="main-title">Tu Día Hábil Uruguay</span>
+        <span class="main-title">👩‍⚖️Tu Día Hábil Uruguay🧑‍⚖️</span>
     </h1>
 
-    <h2 class="sub-title">🧑‍⚖️Calculadora de tu Día Hábil👩‍⚖️</h2>
+    <h2 class="sub-title">Calculadora de tu Día Hábil</h2>
     
     <div class="container">
         <label for="fecha">Selecciona una fecha:</label>
