--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1 class="title">
-        <span class="main-title">Tu Día Hábil Uruguay 🧑‍⚖️🧑‍⚖️</span>
+        <span class="main-title">Tu Día Hábil Uruguay</span>
     </h1>
 
     <h2 class="sub-title">Calculadora de tu Día Hábil</h2>
@@ -33,7 +33,7 @@
     </div>
 
     <footer>
-        <p>De Miguel a Vicky 🫶</p>
+        <p>a Vicky 👩‍⚖️</p>
     </footer>
 
     <script src="script.js"></script>
