--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
 
     <footer>
-        <p>Hecho con ❤️ para Vicky 👩‍⚖️</p>
+        <p>Hecho para Vicky 👩‍⚖️</p>
     </footer>
 
     <script src="script.js"></script>
