--- a/index.html
+++ b/index.html
@@ -1,175 +1,21 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" content="Calcula tu día hábil en Uruguay fácilmente con nuestra herramienta en línea.">
-
-    <meta name="google-site-verification" content="LCGPDSlNvAWgG8nmTtlGldRpRumg4z9EgABCd0Uh0HY" />
-
-    <title>Tu Día Hábil Uruguay</title>
-
-    <link rel="stylesheet" href="style.css">
-
-    <!-- Código de Google AdSense -->
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6775600074630483"
-
-            crossorigin="anonymous"></script>
-
+    <meta name="description" content="Calcula la fecha resultante al sumar días hábiles en Uruguay.">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Calculadora de Fecha Hábil en Uruguay</title>
+    <link rel="stylesheet" href="style.css"> <!-- Importar estilos CSS -->
 </head>
-
 <body>
 
     <header>
-
         <h1 class="title">
-
-            <span class="main-title">Tu Día Hábil Uruguay</span>
-
+            📅 Calculadora de Fecha Hábil
         </h1>
-
     </header>
 
     <main>
-
-        <h2 class="sub-title">Calculadora de tu Día Hábil</h2>
-
+        <h2 class="sub-title">Obtén una fecha sumando días hábiles</h2>
         <div class="container">
-
-            <fieldset>
-
-                <legend>Ingresa los datos:</legend>
-
-                <label for="fecha">Selecciona una fecha:</label>
-
-                <input type="date" id="fecha">
-
-                <label for="dias">Cantidad de días hábiles:</label>
-
-                <input type="number" id="dias" min="1" placeholder="Ej: 10">
-
-            </fieldset>
-
-        </div>
-
-        <button onclick="calcularDiaHabil()">Calcular</button>
-
-        <p id="resultado" aria-live="polite"></p>
-
-    </main>
-
-    <footer>
-
-    </footer>
-
-    <script>
-
-        // Lista de feriados en Uruguay (como fechas en formato ISO)
-
-        const feriados = [
-
-            "2025-01-01", // Año Nuevo
-
-            "2025-01-06", // Día de Reyes
-
-            "2025-03-01", // Transmisión de mando
-
-            "2025-03-02", // Carnaval
-
-            "2025-03-03", // Carnaval
-
-            "2025-03-04", // Carnaval
-
-            "2025-04-14", // Semana de Turismo (lunes)
-
-            "2025-04-15", // Semana de Turismo (martes)
-
-            "2025-04-16", // Semana de Turismo (miércoles)
-
-            "2025-04-17", // Semana de Turismo (jueves)
-
-            "2025-04-18", // Semana de Turismo (viernes)
-
-            "2025-05-01", // Día de los Trabajadores
-
-            "2025-05-18", // Batalla de las Piedras
-
-            "2025-06-19", // Natalicio de Artigas
-
-            "2025-07-18", // Jura de la Constitución
-
-            "2025-08-25", // Declaratoria de la Independencia
-
-            "2025-10-12", // Día de la Raza
-
-            "2025-11-02", // Día de los Difuntos
-
-            "2025-12-25"  // Navidad
-
-        ];
-
-        // Función para verificar si una fecha es feriado o fin de semana
-
-        function esFeriadoOFinDeSemana(fecha) {
-
-            const dia = fecha.getDay();
-
-            const fechaIso = fecha.toISOString().split('T')[0]; // Fecha en formato YYYY-MM-DD
-
-            
-
-            // Si es sábado (6) o domingo (0) o es un feriado
-
-            return dia === 0 || dia === 6 || feriados.includes(fechaIso);
-
-        }
-
-        // Función para calcular los días hábiles
-
-        function calcularDiaHabil() {
-
-            const fechaSeleccionada = document.getElementById('fecha').value;
-
-            const diasHabil = parseInt(document.getElementById('dias').value);
-
-            if (!fechaSeleccionada || isNaN(diasHabil)) {
-
-                document.getElementById('resultado').textContent = 'Por favor, ingresa todos los datos correctamente.';
-
-                return;
-
-            }
-
-            let fecha = new Date(fechaSeleccionada); // Convertimos la fecha seleccionada a objeto Date
-
-            let diasContados = 0;
-
-            while (diasContados < diasHabil) {
-
-                fecha.setDate(fecha.getDate() + 1); // Aumentamos un día
-
-                if (!esFeriadoOFinDeSemana(fecha)) {
-
-                    diasContados++;
-
-                }
-
-            }
-
-            const fechaResultado = fecha.toISOString().split('T')[0]; // Obtenemos la fecha en formato YYYY-MM-DD
-
-            document.getElementById('resultado').textContent = `El día hábil número ${diasHabil} es: ${fechaResultado}`;
-
-        }
-
-    </script>
-
-</body>
-
-</html>
